// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`depositBoosted > updates the values for an existing ccm swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "1000000",
  "depositBoostedAt": 2022-12-06T14:31:45.000Z,
  "depositBoostedBlockIndex": "120-7",
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "c7323b09ad750b311cdee3f1555c8ea9db52a7343a8d597474aa6c860f626b62",
  "destAddress": null,
  "destAsset": "Flip",
  "effectiveBoostFeeBps": 5,
  "egressId": null,
  "fees": [
    {
      "amount": "500",
      "asset": "Btc",
      "type": "BOOST",
    },
    {
      "amount": "1000",
      "asset": "Btc",
      "type": "INGRESS",
    },
  ],
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 1n,
  "originType": "VAULT",
  "prewitnessedDepositId": 101n,
  "refundEgressId": null,
  "requestType": "LEGACY_SWAP",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "1000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2023-01-01T00:00:00.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`depositBoosted > updates the values for an existing swap 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "1000000",
  "depositBoostedAt": 2022-12-06T14:31:45.000Z,
  "depositBoostedBlockIndex": "120-7",
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "c7323b09ad750b311cdee3f1555c8ea9db52a7343a8d597474aa6c860f626b62",
  "destAddress": null,
  "destAsset": "Flip",
  "effectiveBoostFeeBps": 5,
  "egressId": null,
  "fees": [
    {
      "amount": "500",
      "asset": "Btc",
      "type": "BOOST",
    },
    {
      "amount": "1000",
      "asset": "Btc",
      "type": "INGRESS",
    },
  ],
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 1n,
  "originType": "VAULT",
  "prewitnessedDepositId": 101n,
  "refundEgressId": null,
  "requestType": "LEGACY_SWAP",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "1000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2023-01-01T00:00:00.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`depositBoosted > updates the values for event with 180 schema 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": null,
  "depositBoostedAt": 2022-12-06T14:31:45.000Z,
  "depositBoostedBlockIndex": "120-7",
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "a609689d549a894c996e25d21bff81f243d64965f87b245ef774ad87196976cc",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": 4,
  "egressId": null,
  "fees": [
    {
      "amount": "4000",
      "asset": "Btc",
      "type": "BOOST",
    },
    {
      "amount": "79",
      "asset": "Btc",
      "type": "INGRESS",
    },
  ],
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 7,
  "nativeId": 159n,
  "originType": "VAULT",
  "prewitnessedDepositId": 6n,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": null,
  "totalBrokerCommissionBps": 0,
}
`;
